<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/bt_explore"
        android:title="@string/explore_title" />
<!--
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/bt_feed"
        android:title="@string/feed_title" />
        -->

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/bt_events"
        android:title="@string/events_title" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/bt_search"
        android:title="@string/search_title" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bt_profile"
        android:title="@string/profile_title" />

</menu>